--- a/Proyecto Final de Fisica/Proyecto Final de Fisica.csproj
+++ b/Proyecto Final de Fisica/Proyecto Final de Fisica.csproj
@@ -85,6 +85,8 @@
     <Reference Include="System.Data.SQLite">
       <HintPath>..\..\..\..\Recursos\Librerias C#\System.Data.SQLite.dll</HintPath>
     </Reference>
+    <Reference Include="System.IO.Compression" />
+    <Reference Include="System.IO.Compression.FileSystem" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
